== 1.0.0 2014-01-26

  * Initial release.
  * When 'xml' tag name is missing, use 'table' as tag name.